[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 119
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.pytest_cache
    | _build
    | build
    | dist
  )/
  | get_version.py
  | versioneer.py
  | clustintime/info.py
  | clustintime/_version.py
  | clustintime/due.py
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.pylint]
max-line-length = 120
disable = [
  "C0114", 
  "C0115", 
  "C0116",
  "R0914",  # Too many local variables
  "R0913",  # Too many arguments 
]
