[versioneer]
VCS = git
style = pep440
versionfile_source = clustintime/_version.py
versionfile_build = clustintime/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 120
exclude=*build/
ignore = E203,E402,W503
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
log_cli = true

[options.package_data]
* =
    resources/*
    tests/data/*
